<resources>

    <string name="app_name">Assesments</string>
    <string name="introduction">Introduction</string>
    <string name="intro_text">uhjrfnc fdjkbvnc kkjdnc
        kjnkdfbvkfkdjfvnlcsdvdz lkjdv kdsfjvnkdf dnkvdfjdfkv.fdmvlkdfmvdf
        vksdfjvndfvdkljvndfvfdm fkjlfvnd
        vdfkjlbvnflurvnjijferfjvlmfnvlaiunlv vkjsdfhdsfbdsjkvbyugrvscjskdbjjcadshjhdsbc
        klshdfhiuineclskjbhdsvkdfjv kdfuvndfklvldfvhnkdj iulvhfdnvjvliun vuhnd dfiuvhdnf
        vldfvnjd dfdlfiuvnj ushfvnfdkvjn kiuvhdnk   vl vdfvv    lvbf vfvljdfvn dfvidfuh fdvfd vfdvfv
        vledrvnfdlvsudher v;fdlvijfkvn d   fvdfiv   dfhvndvdf v   ;df dfv;dfhv dfv vfdv
        vlrdhunlesiurvhrvnreleurh    ;rogijdfvd v g g;dofij    dfovijdf vv   ;eorijvdf vfd vdf v;dofvij df
        erlihveilfervervkdfjvbdnleriuvhievnneigrhverv dfskjvn dfviduhvjdofivj dfvdfovj dfvodf v dvfdv    vdfvoik
        vdflkvhndkfvdoiuvhrnvn</string>

    <string name="facts_text">uhjrfnc fdjkbvnc kkjdnc
        kjnkdfbvkfkdjfvnlcsdvdz lkjdv kdsfjvnkdf dnk
        vlievhnldfv erudekfhvnkieurhvuevkdf
        vleiuvnhleirudfhiuvleiruhfnvfovierv vlduhvjnd fvdfv   dfuvh dfvudfivh fdvfhduvidf vih
        efoivjervjdfviojo dflkjvknsdifuvndf osilfvj dfuhdnfv fvhdf vdfivjdf vdfoivjdf vv
        vdfuhvndflviudfvnhudfvliuerhverinvfdvdfuvherjnvlidfuvhdfunvdfvfdvdfiluvhnvdfjdfkv.fdmvlkdfmvdf
        vksdfjvndfvdkljvndfvfdm fkjlfvnd
        vdfkjlbvnflurvnjijferfjvlmfnvlaiunlv vvkifvhdnfuivhervkdvudfndlfiuhnv dfkjshlviufdnvdfv
        kjdfvhbdkdusfvbdfkjvnkdfvdfvvfdvijenrliuvhnfdkjlvsidruvgervjnfvdlvunjfiurghlnfvd fvyugfvuudfhvnlkdfv liudfv
        vkdfuvhfnudilsvifudhvkidnfidfuvhuevnfd
        vdflkvhndkfvdoiuvhrnvn  helloo</string>

    <string name="facts">Science Facts</string>
    <string name="begin_btn">Begin</string>
    <string name="about_assessment">About this Assessment</string>
    <string name="text_about_Assessment">   kjnkdfbvkfkdjfvnlcsdvdz lkjdv kdsfjvnkdf dnk
        vlievhnldfv erudekfhvnkieurhvuevkdf
        vleiuvnhleirudfhiuvleiruhfnvfovierv vlduhvjnd fvdfv   dfuvh dfvudfivh fdvfhduvidf vih
        efoivjervjdfviojo dflkjvknsdifuvndf osilfvj dfuhdnfv fvhdf vdfivjdf vdfoivjdf vv
        vdfuhvndflviudfvnhudfvliuerhverinvfdvdfuvherjnvlidfuvhdfunvdfvfdvdfiluvhnvdfjdfkv.fdmvlkdfmvdf
        vksdfjvndfvdkljvndfvfdm fkjlfvnd
        vdfkjlbvnflurvnjijferfjvlmfnvlaiunlv vvkifvhdnfuivhervkdvudfndlfiuhnv dfkjshlviufdnvdfv
        kjdfvhbdkdusfvbdfkjvnkdfvdfvvfdvijenrliuvhnfdkjlvsidruvgervjnfvdlvunjfiurghlnfvd fvyugfvuudfhvnlkdfv liudfv
        vkdfuvhfnudilsvifudhvkidnfidfuvhuevnfd
        vdflkvhndkfvdoiuvhrnvn  helloo</string>
    <string name="pager_image">pager image 1</string>
    <string name="scroll_text">this vector to scroll down text of about this assessment</string>
    <string name="description_text">description text here</string>
    <string name="description_icon">more to slide horizontally</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_first_assessment">first_assessment</string>
    <string name="submit">Submit</string>
    <string name="previous">Previous</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="congrats">Congratulations</string>
    <string name="title_activity_assessment_result">assessment_result</string>
    <string name="suggested_skills"> Suggested Skills for you </string>
    <string name="done_assessments_txt">Done Assessments</string>
    <string name="discover_assessments_txt">Discover Assessments</string>
    <string name="OverAll_report_txt">OverAll Report</string>
    <string name="howToDo_assessments_txt">How to do Assessments</string>
    <string name="assessment_Q"> question here</string>
    <string name="DiscoverAsssessment_categoryName1">Name of the assessment category 1</string>
    <string name="DiscoverAsssessment_categoryName2">Name of the assessment category 2</string>
    <string name="DiscoverAsssessment_categoryName3">Name of the assessment category 3</string>
    <string name="photo_of_assessmentCategory">this is the photo of the Assessment category</string>
    <string name="start_assessment">Start this Assessment</string>
    <string name="title_activity_start_first_assessment">start_first_assessment</string>
    <string name="title_activity_start_assessment_cat1">start_assessment_cat1</string>
    <string name="tab_text_1">earn skills </string>
    <string name="tab_text_2">recent skills</string>
    <string name="tab_text_3">tests</string>
    <string name="congrats_text">1) Initialize x as root.
2) While x is not leaf, do following
..a) Find the child of x that is going to be traversed next. Let the child be y.
..b) If y is not full, change x to point to y.
..c) If y is full, split it and change x to point to one of the two parts of y.
        If k is smaller than mid key in y, then set x as first part of y. Else second part of
        y. When we split y, we move a key from y to its parent x.
3) The loop in step 2 stops when x is leaf. x must have space for 1 extra key as we have been splitting
        all nodes in advance. So simply insert k to x.
</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_discover_assessment">discover_assessment</string>
    <string name="skill_1"> skill 1 </string>
    <string name="skill_2"> skill 2 </string>
    <string name="skill_3"> skill 3 </string>
    <string name="done"> 2</string>
    <string name="enrolled"> 2</string>
    <string name="mastered"> 2</string>
    <string name="title_activity_skills_main">skills_main</string>
    <string name="skill_intro_txt">ljfdcnliuhacndauhnvccdliudsncidsncsiducndscsdijcscnskcnscsaiuchsdnlcuifuvhcnflaiuafvhndfluidfavnfikvnsdvufdivndduvihnefuhdnlkd iudf sdifuvhsvnsikvnelirvnv ieun ieuvnieuverivldfncas</string>
    <string name="skill_req_txt">kjfchdnfiaudfnv ddfuinvfiundfavk liuafdhvn ieulfkhdn laiufvhnLFDIVNFdlkvndfvDLFIDHNDFLKV DFLVJKADV</string>
    <string name="req">Requirements</string>
    <string name="skill_time">Required time to be efficient</string>
    <string name="skill_time_txt">reqiured time to be good at this skll goes from 8 to 10 days by practicing every day</string>
    <string name="skill_process_txt">process of this skilll is kjfewhnckblaikdv</string>
    <string name="process">Process</string>
    <string name="start_skill">Start this skill</string>
    <string name="goTo_category">Go to Assessment</string>

</resources>

