<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:id="@+id/skillImage"
    android:src="@drawable/image"
    android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/skill_intro"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/introduction"
        android:padding="15dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/skill_intro_text"
        android:text="@string/skill_intro_txt"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/skill_req"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/req"
        android:padding="15dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/skill_req_text"
        android:text="@string/skill_req_txt"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/skill_time"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/skill_time"
        android:padding="15dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/skill_time_text"
        android:text="@string/skill_time_txt"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/skill_process"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/process"
        android:padding="15dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/skill_process_text"
        android:text="@string/skill_process_txt"
        android:layout_margin="10dp"
        android:textSize="15sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/start_skill"
        android:textSize="15sp"
        android:elevation="8dp"/>
</LinearLayout>