<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:fillViewport="false"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/introduction"
            android:id="@+id/intro"
            android:textColor="#db3340"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/intro"
            android:id="@+id/intro_text"
            android:text="@string/intro_text"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/facts"
            android:id="@+id/facts"
            android:layout_below="@+id/intro_text"
            android:textColor="#db3340"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/facts"
            android:id="@+id/facts_text"
            android:text="@string/facts_text"
            />
    </RelativeLayout>
</ScrollView>
