<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/discover_assessments"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="8dp"
        android:background="@drawable/rectangle"
        android:elevation="2dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/discover_assessments_txt"
        android:layout_weight="1"
        android:textColor="@color/primary_text" />


    <TextView
        android:id="@+id/done_assessments"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="8dp"
        android:background="@drawable/rectangle"
        android:layout_weight="1"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed"
        android:elevation="2dp"
        android:gravity="center"
        android:text="@string/done_assessments_txt"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/howToDo_assessment"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="8dp"
        android:background="@drawable/rectangle"
        android:elevation="2dp"
        android:textSize="18sp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/howToDo_assessments_txt"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/overAll_Report"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:background="@drawable/rectangle"
        android:elevation="2dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/OverAll_report_txt"
        android:textColor="@color/primary_text" />
</LinearLayout>

