<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/discoverTxt"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:text="@string/DiscoverAsssessment_categoryName1"/>

    <ImageView
        android:layout_width="300dp"
        android:id="@+id/discoverImg"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:scaleType="centerCrop"
        android:contentDescription="@string/description_icon"
        android:src="@drawable/image"/>

    <TextView
        android:id="@+id/discover_description"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:textColor="@color/secondary_text"
        android:textSize="18sp"
        android:text="@string/description_text" />

    <Button
        android:id="@+id/discoverGoTO"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@color/accent"
        android:textColor="@color/icons"
    android:text="Go to this assessment"/>

</LinearLayout>
