<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/congrats_card">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:src="@drawable/congrats" />
            <TextView
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/congrats"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:id="@+id/congrats"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/congrats_text"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/secondary_text"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"
                android:id="@+id/congrats_text" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggested_skills"
        android:id="@+id/suggested_text"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="start"
        android:layout_marginStart="32dp"
        android:textColor="@color/primary_text"
        android:textSize="20sp" />

</LinearLayout>
