<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mayouza.activities.CategoryName"
    android:orientation="vertical">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:src="@drawable/image"
    android:scaleType="centerCrop"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/about_assessment"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="3"
                android:fillViewport="true"
                android:text="@string/text_about" />

            <ImageView
                android:id="@+id/expand_more"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/scroll_text"
                android:src="@drawable/ic_expand_more_black_24dp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:text="@string/begin_btn"
        android:elevation="8dp"
        android:fontFamily="sans-serif" />
</LinearLayout>