<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:id="@+id/firstAssesImg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="3"
            android:scaleType="centerCrop"
            android:src="@drawable/image" />

        <android.support.v7.widget.CardView
            android:id="@+id/CardAbout_assessment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/about_assessment" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/txtAboutAssessment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:text="@string/text_about_Assessment" />
                </ScrollView>

                <ImageView
                    android:id="@+id/expand_about_Assessment"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_expand_more_black_24dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/startAssessment"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/start_assessment" />
    </LinearLayout>
